Refatoração do código para inclusão de lógica de cálculo de troco ao cliente após efetuar pagamentos de pedidos.